--- a/style.css
+++ b/style.css
@@ -4,50 +4,67 @@
     box-sizing: border-box;
 }
 
-body {
-    display: grid;
-    place-items: center;
-    height: 100vh;
-    background: blanchedalmond;
-
+.header {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    max-width: 500px;
+    border: 5px dashed black;
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 75px;
+    padding: 10px;
 }
 
-.card {
-    width: 100px;
-    aspect-ratio: 1/1;
-    position: relative;
-    perspective: 500px;
-    transform-style: preserve-3d;
-    cursor: pointer;
+
+.score {
+    margin-top: 20px;
 }
 
-.cardgrid {
-    display: grid;
-    grid-template-columns: repeat(4, 100px);
-    gap: 15px;
-}
 
-.card img {
+img {
     height: 100px;
     width: 100px;
-    object-fit: cover;
-    position: absolute;
-    transition: 0.5s;
-    backface-visibility: hidden;
-    border: 3px solid lime;
-    border-radius: 15px;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.247);
+}
+
+.container {
+    max-width: 960px;
+    display: grid;
+    gap: 20px;
+    margin: auto;
+    padding: 10px;
+    grid-template-columns: repeat(3, auto);
+}
+
+.cell {
+    cursor: pointer;
+    position: relative;
+}
+
+
+.cell div {
+    height: 150px;
+    border-radius: 5px;
 }
 
 .front {
-    transform: rotateY(200deg);
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    border: 2px solid black;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: rotateY(90deg);
 }
 
-.back, .cardflip .front {
+.back {
+    background-color: rgb(22, 19, 19);
+}
+
+.turn {
     transform: rotateY(0deg);
 }
-
-.cardflip .back {
-    transform: rotateY(-180deg);
-}
-
