--- a/style.css
+++ b/style.css
@@ -2,10 +2,11 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .header {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-transform: uppercase;
     max-width: 500px;
     border: 5px dashed black;
     margin: auto;
@@ -18,9 +19,19 @@
     padding: 10px;
 }
 
+p {
+    text-align: center;
+    font-size: x-large;
+    padding-top: 10px;
+    margin: 20px ;
+    background-color: rgba(255, 235, 205, 0.582);
+}
 
 .score {
     margin-top: 20px;
+    padding-left: 80px;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
 
@@ -67,4 +78,24 @@ img {
 
 .turn {
     transform: rotateY(0deg);
+}
+
+.matched {
+    transform: rotateY(0deg);
+}
+
+.showcard {
+    transform: rotateY(0deg);
+}
+
+@media screen and (min-width: 700px) {
+    .header {
+        max-width: 450px;
+    }
+    .container {
+        grid-template-columns: repeat(4,auto);
+    }
+    .cell {
+        height: 150px;
+    }
 }
