--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
+/* header text */
 .header {
     text-transform: uppercase;
     max-width: 500px;
@@ -18,7 +18,7 @@
     height: 75px;
     padding: 10px;
 }
-
+/* description box */
 p {
     text-align: center;
     font-size: x-large;
@@ -26,7 +26,7 @@ p {
     margin: 20px ;
     background-color: rgba(255, 235, 205, 0.582);
 }
-
+/* score text */
 .score {
     margin-top: 20px;
     padding-left: 80px;
@@ -39,7 +39,7 @@ img {
     height: 100px;
     width: 100px;
 }
-
+/* game board */
 .container {
     max-width: 960px;
     display: grid;
@@ -59,7 +59,7 @@ img {
     height: 150px;
     border-radius: 5px;
 }
-
+/* front of card */
 .front {
     position: absolute;
     height: 100%;
@@ -71,11 +71,11 @@ img {
     align-items: center;
     transform: rotateY(90deg);
 }
-
+/* back of card */
 .back {
     background-color: rgb(22, 19, 19);
 }
-
+/* transform for cards changing state */
 .turn {
     transform: rotateY(0deg);
 }
@@ -87,7 +87,7 @@ img {
 .showcard {
     transform: rotateY(0deg);
 }
-
+/* change of column size for mobile devices */
 @media screen and (min-width: 700px) {
     .header {
         max-width: 450px;
